uberfire-workbench/uberfire-workbench-client-views-patternfly/src/main/resources/org/uberfire/client/views/uberfire-patternfly.css
/*
 *
 *  * Copyright 2012 JBoss Inc
 *  *
 *  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
 *  * use this file except in compliance with the License. You may obtain a copy of
 *  * the License at
 *  *
 *  * http://www.apache.org/licenses/LICENSE-2.0
 *  *
 *  * Unless required by applicable law or agreed to in writing, software
 *  * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 *  * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 *  * License for the specific language governing permissions and limitations under
 *  * the License.
 *
 */

.fa-muted {
  color: #999999;
}

.uf-listbar-panel {
  border: none;
}

.uf-listbar-panel-header {
  background-color: #FFFFFF !important;
  min-height: 36px;
}

.uf-listbar-panel-header .btn-toolbar {
  margin-top: -4px;
}

.uf-listbar-panel-header .dropdown-menu {
  margin-top: 5px;
}

.uf-listbar-panel-header-toolbar .dropdown > .btn {
  vertical-align: baseline !important;
}

.uf-listbar-panel-header-toolbar .dropdown-menu {
  min-width: 26px;
  max-width: 26px;
  text-align: center;
  margin-top: 7px;
  margin-right: -5px;
}

.uf-listbar-panel-header-toolbar .dropdown-menu > li {
  padding-top: 3px;
  padding-bottom: 3px;
}

.uf-listbar-panel-header-toolbar .dropdown-menu > li > a {
  padding: 0px;
}

.uf-listbar-panel-header-toolbar > li > a {
  color: inherit;
}

.uf-listbar-panel-header-title {
  font-size: 16px;
  font-weight: 500;
  margin: 0px;
}

.uf-listbar-panel-header-title:hover,
.uf-listbar-panel-header-title:focus {
  color: inherit;
  text-decoration: none;
}

.uf-tabbar-panel {

}

.uf-tabbar-panel-nav-tabs {
  padding-top: 1px;
}

.uf-tabbar-panel-nav-tabs .uf-activeNavTabs {

}

.uf-modal .modal-footer {
  margin-top: 0px;
}

